# 14203_popov_cpp

./: .gitignore  CMakeLists.txt
include/: EvictingCacheMap.h
task-1c/: .README.txt.swp  .gitignore  CMakeLists.txt  README.txt
task-1c/cmake-modules/: CodeCoverage.cmake
task-1c/include/: EvictingCacheMap.h  EvictingCacheMap.inc
task-1c/test/: CMakeLists.txt
task-1c/test/include/: EvictingCacheMapTest.h  Traceable.h
task-1c/test/src/: EvictingCacheMapTest.cpp  Traceable.cpp  main.cpp
task-2a/: CMakeLists.txt  README.txt
task-2a/include/: Accessor.h  FilterAccessor.h  GenAccessor.h  GroupAccessor.h  IterAccessor.h  MapAccessor.h  ModifierAccessor.h  Modifiers.h  RangeAccessor.h  SkipAccessor.h  Stream.h  Terminators.h  TypeTraits.h  Utils.h  filter.h  get.h  group.h  map.h  skip.h
task-2a/test/: CMakeLists.txt
task-2a/test/include/: Noizy.h  Traceable.h
task-2a/test/src/: ComplexTests.cpp  FilterTests.cpp  GetTests.cpp  GroupTests.cpp  MapTests.cpp  NthTests.cpp  PrintToTests.cpp  ReduceTests.cpp  SkipTests.cpp  StreamTests.cpp  SumTests.cpp  main.cpp
test/: CMakeLists.txt  Traceable.h  main.cpp
test/include/: EvictingCacheMapTest.h  Traceable.h
test/src/: EvictingCacheMapTest.cpp  Traceable.cpp  main.cpp
